# CaloGeo

./: CMakeLists.txt  Readme.md
SDHCAL/compact/: materials.xml  sdhcal_m3.xml
SDHCAL/src/: sdhcal_m3.cpp
